<resources>
    <string name="app_name">Proyecto Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ordenar_de_a_z">Ordenar de A-Z</string>
    <string name="ordenar_de_z_a">Ordenar de Z-A</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="episode_appearances">Episodes</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo_label">alv21808@uvg.edu.gt</string>
    <string name="ingreso_invalido">El correo y la contraseña ingresados son incorrectos.</string>
    <string name="correo_login">alv21808@uvg.edu.gt</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="name">Name</string>
    <string name="guardar">GUARDAR</string>
</resources>